--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,6 +56,7 @@ jobs:
         with:
           repository: ${{ env.GIT_REPO }}
           ref: ${{ github.ref_name }}
+          path: rusty-kaspa
 
       - name: Copy Dockerfile
         run: cp docker/Dockerfile ./Dockerfile
@@ -69,6 +70,7 @@ jobs:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
+            REPO_DIR=rusty-kaspa
             REPO_URL=${{ env.GIT_REPO }}
             RUSTY_VERSION=${{ github.ref_name }}
             ARTIFACTS=${{ env.ARTIFACTS }}
