Fixed workflow for prerelease

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -116,7 +116,7 @@ jobs:
 
       - name: Docker meta
         id: meta
-        if: github.event_name != 'release'
+        if: github.event_name != 'release' || github.event.release.prerelease == true
         uses: docker/metadata-action@v5
         with:
           images: |
@@ -128,9 +128,9 @@ jobs:
             type=ref,event=branch
             type=ref,event=tag
 
-      - name: Docker meta
+      - name: Docker meta - release
         id: meta_release
-        if: github.event_name == 'release'
+        if: github.event_name == 'release' && github.event.release.prerelease == false
         uses: docker/metadata-action@v5
         with:
           images: |
@@ -148,11 +148,11 @@ jobs:
             $(printf '${{ vars.DOCKER_REPO }}@sha256:%s ' *)
 
       - name: Inspect image
-        if: github.event_name != 'release'
+        if: github.event_name != 'release' || github.event.release.prerelease == true
         run: |
           docker buildx imagetools inspect ${{ vars.DOCKER_REPO }}:${{ steps.meta.outputs.version }}
 
-      - name: Inspect image release
-        if: github.event_name == 'release'
+      - name: Inspect image - release
+        if: github.event_name == 'release' && github.event.release.prerelease == false
         run: |
           docker buildx imagetools inspect ${{ vars.DOCKER_REPO }}:${{ steps.meta_release.outputs.version }}
