--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,8 @@ jobs:
             platform: linux/amd64
           - os: ubuntu-22.04-arm
             platform: linux/arm64
+    outputs:
+      GIT_VERSION: ${{ steps.set_version.outputs.GIT_VERSION }}
     steps:
       - name: Prepare
         run: |
@@ -58,6 +60,13 @@ jobs:
           ref: ${{ github.ref_name }}
           path: rusty-kaspa
 
+      - name: Git describe version
+        id: set_version
+        run: |
+          cd rusty-kaspa
+          echo "GIT_VERSION=$(git describe --tags --always)" >> $GITHUB_ENV
+          echo "GIT_VERSION=$(git describe --tags --always)" >> $GITHUB_OUTPUT
+
       - name: Copy Dockerfile
         run: |
           cp docker/Dockerfile ./Dockerfile
@@ -74,7 +83,7 @@ jobs:
           build-args: |
             REPO_DIR=rusty-kaspa
             REPO_URL=${{ env.GIT_REPO }}
-            RUSTY_VERSION=${{ github.ref_name }}
+            RUSTY_VERSION=${{ env.GIT_VERSION }}
             ARTIFACTS=${{ env.ARTIFACTS }}
           target: kaspad
           outputs: type=image,"name=${{ vars.DOCKER_REPO }}",push-by-digest=true,name-canonical=true,push=true
@@ -97,6 +106,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
+    env:
+      GIT_VERSION: ${{ needs.build.outputs.GIT_VERSION }}
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
@@ -124,8 +135,7 @@ jobs:
           flavor: |
             latest=false
           tags: |
-            type=sha,prefix=
-            type=ref,event=branch
+            type=raw,value=${{ env.GIT_VERSION }}
             type=ref,event=tag
 
       - name: Docker meta - release
@@ -138,7 +148,7 @@ jobs:
           flavor: |
             latest=true
           tags: |
-            type=sha,prefix=
+            type=raw,value=${{ env.GIT_VERSION }}
             type=ref,event=tag
 
       - name: Create manifest list and push
