--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build:
-    if: ${{ vars.DOCKER_REPO }}
+    if: ${{ vars.DOCKER_REPO && vars.DOCKER_LEGACY_REPO }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -38,6 +38,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKER_REPO }}
+            ${{ vars.DOCKER_LEGACY_REPO }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -86,7 +87,7 @@ jobs:
             RUSTY_VERSION=${{ env.GIT_VERSION }}
             ARTIFACTS=${{ env.ARTIFACTS }}
           target: kaspad
-          outputs: type=image,"name=${{ vars.DOCKER_REPO }}",push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,"name=${{ vars.DOCKER_REPO }},${{ vars.DOCKER_LEGACY_REPO }}",push-by-digest=true,name-canonical=true,push=true
 
       - name: Export digest
         run: |
@@ -132,6 +133,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKER_REPO }}
+            ${{ vars.DOCKER_LEGACY_REPO }}
           flavor: |
             latest=false
           tags: |
@@ -145,6 +147,7 @@ jobs:
         with:
           images: |
             ${{ vars.DOCKER_REPO }}
+            ${{ vars.DOCKER_LEGACY_REPO }}
           flavor: |
             latest=true
           tags: |
@@ -156,13 +159,17 @@ jobs:
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ vars.DOCKER_REPO }}@sha256:%s ' *)
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ vars.DOCKER_LEGACY_REPO }}@sha256:%s ' *)
 
       - name: Inspect image
         if: github.event_name != 'release' || github.event.release.prerelease == true
         run: |
           docker buildx imagetools inspect ${{ vars.DOCKER_REPO }}:${{ steps.meta.outputs.version }}
+          docker buildx imagetools inspect ${{ vars.DOCKER_LEGACY_REPO }}:${{ steps.meta.outputs.version }}
 
       - name: Inspect image - release
         if: github.event_name == 'release' && github.event.release.prerelease == false
         run: |
           docker buildx imagetools inspect ${{ vars.DOCKER_REPO }}:${{ steps.meta_release.outputs.version }}
+          docker buildx imagetools inspect ${{ vars.DOCKER_LEGACY_REPO }}:${{ steps.meta_release.outputs.version }}
